@@ -33,4 +33,5 @@ Fixed #2186 `total_runtime` will now trigger an overlay update
 Fixed #2195 an image on the docs was a dead link
 Fixes sort order of resolution collections
 Fixes #2228 ".any" not accepted for a variety of imdb_search parameters
+Fixes `streaming` defaults adding and removing items randomly
 Various other Minor Fixes
